--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 header{
 	background-color: lightskyblue;
 }
@@ -21,14 +20,11 @@ h2{
 h1{
 	text-align: center;
 }
-
 @media screen and (max-width: 900px){
-	p{
-		background-color: seagreen;
+	html{
 		font-size: 30px;
 		width: 500px;
 	}
-
 
 .q1,
 .q2,
