--- a/style.css
+++ b/style.css
@@ -21,9 +21,13 @@ h1{
 	text-align: center;
 }
 @media screen and (max-width: 900px){
-	html{
-		font-size: 30px;
+	body{
+		font-size: 20px;
 		width: 500px;
+	}
+
+	img{
+		max-width: 100%;
 	}
 
 .q1,
