--- a/style.css
+++ b/style.css
@@ -72,7 +72,16 @@ h1{
 }
 
 @media screen and (max-width: 900px){
-	p{
+	.me{
+		background-color: yellow;
+		font-size: 30px;
+		width: 500px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.design{
+		background-color: palegreen;
 		font-size: 30px;
 		width: 500px;
 	}
